--- a/index.html
+++ b/index.html
@@ -15,24 +15,58 @@
     <header class="cabecalho"> 
      <p class="cabecalho-vox">Vox</p>
      <nav class="cabecalho-menu" >
-        <a class="cabecalho-menu-item" >Home</a>
-        <a class="cabecalho-menu-item" >Funcionalidades</a>
-        <a class="cabecalho-menu-item" >Sobre nós</a>
-        <a class="cabecalho-menu-item" >Log in</a>
+        <a class="cabecalho-menu-item" href="#inicio" >Home</a>
+        <a class="cabecalho-menu-item" href="#sobre" >Projeto</a>
+        <a class="cabecalho-menu-item" href="#footer" >Contato</a>
+        <a class="cabecalho-menu-item login_btn" >Log in</a>
      </nav>
     </header>
 
-    <main class="conteudo">
-        <section class="conteudo-principal">
+    <main class="conteudo" id="inicio">
+        <section class="conteudo-principal" >
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Aprenda programação 
                     da melhor forma!</h1>
                     <p class="conteudo-principal-escrito-subtitulo">Aqui você pode aprender lógica de programação e conceitos essênciais para o seu futuro como programador.</p>
                     <button class="conteudo-principal-botao">Comece já!</button>
             </div>
-            <img class="conteudo-principal" src="img\Online_page-bro_1.png" alt="mulher estudando para programação">
+            <div class="imagem">
+                <img class="" src="img\Online_page-bro_1.png" alt="mulher estudando para programação" width="800">
+            </div>
+        </section>
+        <section id="sobre" >
+            <div class="membros">
+            </div>
+            <div class="sobre_content">
+                <h1 class="sobre_title">Projeto</h1>
+                <p class="conteudo-principal-escrito-subtitulo">O objetivo principal de nosso site é introduzir de forma mais simples e dinâmica o mundo da programação por meio de atividades interativas.</p>
+                <p class="conteudo-principal-escrito-subtitulo"> Buscamos começar pelo básico da programação e incentivar os usuários a buscar mais conhecimento por conta própria e ajudá-los a organizar seus horários de forma saudável. Equilibrando os estudos e o lazer.</p>
+            </div>
+            <img src="img/7809433.jpg" alt="" width="550px">
         </section>
     </main>
+    <footer>
+        <section class="footer_content" id="footer">
+            <div class="local">
+               <div class="local_text">
+                <h3>Localização</h3>
+                <p>Endereço: R. Guilherme Pinto, 114 - Graças, Recife - PE, 52011-210</p>
+               </div>
+               <div class="form_content"> 
+                <label for="name">
+                    <input type="text" name="name" id="name" placeholder="Nome">
+                </label>
+                <label for="email">
+                    <input type="text" name="email" id="email" placeholder="Email">
+                </label>
+                <label for="message">
+                    <input type="text" name="message" id="message" placeholder="Mensagem">
+                </label>
+               </div>
+            </div>
+            <div class="bottom_content"></div>
+        </section>
+    </footer>
 </body>
-
+<script src="index.js"></script>
 </html>
