--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <p class="cabecalho-vox">Vox</p>
      <nav class="cabecalho-menu" >
         <a class="cabecalho-menu-item" href="#inicio" >Home</a>
-        <a class="cabecalho-menu-item" href="#sobre" >Projeto</a>
+        <a class="cabecalho-menu-item" href="#sobre" >Sobre nós</a>
         <a class="cabecalho-menu-item" href="#footer" >Contato</a>
         <a class="cabecalho-menu-item login_btn" >Log in</a>
      </nav>
@@ -38,11 +38,11 @@
             <div class="membros">
             </div>
             <div class="sobre_content">
-                <h1 class="sobre_title">Projeto</h1>
-                <p class="conteudo-principal-escrito-subtitulo">O objetivo principal de nosso site é introduzir de forma mais simples e dinâmica o mundo da programação por meio de atividades interativas.</p>
-                <p class="conteudo-principal-escrito-subtitulo"> Buscamos começar pelo básico da programação e incentivar os usuários a buscar mais conhecimento por conta própria e ajudá-los a organizar seus horários de forma saudável. Equilibrando os estudos e o lazer.</p>
+                <h1 class="sobre_title">Sobre nós</h1>
+                <p class="conteudo-principal-escrito-subtitulo">O Objetivo Principal de nosso site é introduzir de forma mais simples e dinâmica o mundo da programação por meio de atividades interativas.</p>
+                <p class="conteudo-principal-escrito-subtitulo">Buscamos começar pelo básico da programação e incentivar os usuarios a buscar mais conhecimento por conta própria e ajudá-los a organizar seus horários de forma saudável. Equilibrando os estudos e o lazer</p>
             </div>
-            <img src="img/7809433.jpg" alt="" width="550px">
+            <img src="img/7809433.jpg" alt="grupo de trabalho comemorando" width="550px">
         </section>
     </main>
     <footer>
@@ -51,6 +51,8 @@
                <div class="local_text">
                 <h3>Localização</h3>
                 <p>Endereço: R. Guilherme Pinto, 114 - Graças, Recife - PE, 52011-210</p>
+                <h3>Outros Contatos</h3>
+                <p>01285947@sempreuninassau.com.br</p>
                </div>
                <div class="form_content"> 
                 <label for="name">
@@ -62,6 +64,7 @@
                 <label for="message">
                     <input type="text" name="message" id="message" placeholder="Mensagem">
                 </label>
+                <button class="enviar_btn">Enviar</button>
                </div>
             </div>
             <div class="bottom_content"></div>
