--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@
             <div class="local">
                <div class="local_text">
                 <h3>Localização</h3>
-                <p>Endereço: R. Guilherme Pinto, 114 - Graças, Recife - PE, 52011-210</p>
+                <div id="googleMap"></div>
+                    
+                <script>
+                function myMap() {
+                var mapProp= {
+                  center:new google.maps.LatLng(-8.05133, -34.90335),
+                  zoom:17,
+                };
+                var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+                }
+                </script>
+                
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfzl2Dpr4uhTDjaiLz539O7OoDeotiDtU&callback=myMap"></script>               
+                    <p>Endereço: R. Guilherme Pinto, 114 - Graças, Recife - PE, 52011-210</p>
                 <h3>Outros Contatos</h3>
                 <p>01285947@sempreuninassau.com.br</p>
                </div>
