--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="cabecalho-menu-item" href="#inicio" >Home</a>
         <a class="cabecalho-menu-item" href="#sobre" >Sobre nós</a>
         <a class="cabecalho-menu-item" href="#footer" >Contato</a>
-        <a class="cabecalho-menu-item login_btn" >Log in</a>
+        <a class="cabecalho-menu-item login_btn" href="page.html" >Comece Já</a>
      </nav>
     </header>
 
@@ -28,7 +28,9 @@
                 <h1 class="conteudo-principal-escrito-titulo">Aprenda programação 
                     da melhor forma!</h1>
                     <p class="conteudo-principal-escrito-subtitulo">Aqui você pode aprender lógica de programação e conceitos essênciais para o seu futuro como programador.</p>
+                    <a href="page.html">
                     <button class="conteudo-principal-botao">Comece já!</button>
+                </a>
             </div>
             <div class="imagem">
                 <img class="" src="img\Online_page-bro_1.png" alt="mulher estudando para programação" width="800">
