--- a/page.html
+++ b/page.html
@@ -23,13 +23,13 @@
     <section class="content_container">
         <sidebar class="sidebar">
             <h1>Python</h1>
-            <a href="">Introdução</a>
-            <a href="">Começando</a>
-            <a href="">Sintaxe</a>
-            <a href="">neymar</a>
-            <a href="">neymar</a>
-            <a href="">neymar</a>
-            <a href="">neymar</a>
+            <a href="">O que é</a>
+            <a href="">O que pode fazer</a>
+            <a href="">Por que</a>
+            <a href="">Curiosidades</a>
+            <a href="">Comparando</a>
+            <a href="">Instalação</a>
+            <a href="">Referências</a>
         </sidebar>
     <div>
 
@@ -53,35 +53,37 @@
             <li>O Python pode ser usado para lidar com big data e realizar matemática complexa.</li>
             <li>O Python pode ser usado para prototipagem rápida ou para o desenvolvimento de software pronto para produção.</li>
         </ul>
-        <h3>Why Python?</h3>
+        <h3>Por que Python?</h3>
         <ul>
-            <li>Python works on different platforms (Windows, Mac, Linux, Raspberry Pi, etc).</li>
-            <li>Python has a simple syntax similar to the English language.</li>
-            <li>Python has syntax that allows developers to write programs with fewer lines than some other programming languages.</li>
-            <li>Python runs on an interpreter system, meaning that code can be executed as soon as it is written. This means that prototyping can be very quick.</li>
-            <li>Python can be treated in a procedural way, an object-oriented way or a functional way.</li>
+            <li>Python funciona em diferentes plataformas (Windows, Mac, Linux, Raspberry Pi, etc).</li>
+            <li>Python possui uma sintaxe simples, semelhante ao inglês.</li>
+            <li>Python possui uma sintaxe que permite aos desenvolvedores escrever programas com menos linhas do que algumas outras linguagens de programação.</li>
+            <li>Python funciona em um sistema de interpretação, o que significa que o código pode ser executado assim que é escrito. Isso significa que a prototipagem pode ser muito rápida.</li>
+            <li>Python pode ser tratado de forma procedural, orientada a objetos ou funcional.</li>
             </ul>
-            <h3>Good to know</h3>
+            <h3>Curiosidades</h3>
             <ul>
-                <li>The most recent major version of Python is Python 3, which we shall be using in this tutorial. However, Python 2, although not being updated with anything other than security updates, is still quite popular.</li>
-                <li>In this tutorial Python will be written in a text editor. It is possible to write Python in an Integrated Development Environment, such as Thonny, Pycharm, Netbeans or Eclipse which are particularly useful when managing larger collections of Python files.</li>
+                <li>A versão principal mais recente do Python é o Python 3. No entanto, o Python 2, embora não esteja recebendo novidades além de atualizações de segurança, ainda é bastante popular.</li>
+                <li>É possível escrever Python em um Ambiente de Desenvolvimento Integrado, como Thonny, Pycharm, Netbeans ou Eclipse, os quais são particularmente úteis ao gerenciar coleções maiores de arquivos Python.</li>
                 </ul>
-                <h3>Python Syntax compared to other programming languages</h3>
+                <h3>A sintaxe do Python em comparação com outras linguagens de programação:</h3>
                 <ul>
-                    <li>Python was designed for readability, and has some similarities to the English language with influence from mathematics.</li>
-                    <li>Python uses new lines to complete a command, as opposed to other programming languages which often use semicolons or parentheses.</li>
-                    <li>Python relies on indentation, using whitespace, to define scope; such as the scope of loops, functions and classes. Other programming languages often use curly-brackets for this purpose.</li>
+                    <li>O Python foi projetado para ser legível e tem algumas semelhanças com o inglês, com influências da matemática.</li>
+                    <li>O Python usa novas linhas para completar um comando, ao contrário de outras linguagens de programação que frequentemente usam ponto e vírgula ou parênteses.</li>
+                    <li>O Python depende da endentação, utilizando espaços em branco, para definir o escopo, como o escopo de loops, funções e classes. Outras linguagens de programação frequentemente usam chaves para esse fim.</li>
                     </ul>
-                    <h3>Exemple</h3>
+                    <h3>Exemplo</h3>
                     <p style="color: #20DBA2;">print("Hello,world")</p>
-                    <h1>Python Getting Started</h1>
-                    <h2>Python Install</h2>
-                    <p>Many PCs and Macs will have python already installed.</p>
-                    <p>To check if you have python installed on a Windows PC, search in the start bar for Python or run the following on the Command Line (cmd.exe):</p>
-                    <p style="color: #20DBA2;">C:\Users\Your Name>python --version</p>
-                    <p>To check if you have python installed on a Linux or Mac, then on linux open the command line or on Mac open the Terminal and type:</p>
+                    <h3>Instalação do Python</h3>
+                    <p>Muitos PCs e Macs já têm o Python instalado.</p>
+                    <p>Para verificar se você tem o Python instalado em um PC com Windows, pesquise na barra de inicialização por Python ou execute o seguinte no Prompt de Comando (cmd.exe):</p>
+                    <p style="color: #20DBA2;">C:\Users\Seu Nome>python --version</p>
+                    <p>Para verificar se você tem o Python instalado em um Linux ou Mac, abra o terminal no Linux ou o Terminal no Mac e digite:</p>
                     <p style="color: #20DBA2;">python --version</p>
-                    <p>If you find that you do not have Python installed on your computer, then you can download it for free from the following website: <a style="color: #20DBA2;" href="https://www.python.org/" target="_blank">https://www.python.org/</a></p>
+                    <p>Se você descobrir que não tem o Python instalado no seu computador, você pode baixá-lo gratuitamente no seguinte site: <a style="color: #20DBA2;" href="https://www.python.org/" target="_blank">https://www.python.org/</a></p>
+                    <h3>Referências</h3>
+                    <p> <a style="color: #20DBA2;" href="https://www.w3schools.com/default.asp" target="_blank">https://www.w3schools.com/default.asp</a> </p>
+                    
     </div>
          <div>
             
