--- a/page.html
+++ b/page.html
@@ -23,19 +23,19 @@
     <section class="content_container">
         <sidebar class="sidebar">
             <h1>Python</h1>
-            <a href="">O que é</a>
-            <a href="">O que pode fazer</a>
-            <a href="">Por que</a>
-            <a href="">Curiosidades</a>
-            <a href="">Comparando</a>
-            <a href="">Instalação</a>
-            <a href="">Referências</a>
+            <a href="#oq">O que é</a>
+            <a href="#fazer">O que pode fazer</a>
+            <a href="#pq">Por que</a>
+            <a href="#curi">Curiosidades</a>
+            <a href="#comp">Comparando</a>
+            <a href="#insta">Instalação</a>
+            <a href="#refe">Referências</a>
         </sidebar>
     <div>
 
     </div>
     <div class="info">
-        <h1>Introdução ao Python</h1>
+        <h1 id="oq">Introdução ao Python</h1>
         <h2>O que é Python?</h2>
         <p>O Python é uma linguagem de programação popular. Foi criada por Guido van Rossum e lançada em 1991.</p>
         <p>É usada para:</p>
@@ -45,7 +45,7 @@
             <li>matemática,</li>
             <li>scripting de sistema.</li>
         </ul>
-        <h3>O que o Python pode fazer?</h3>
+        <h3 id="fazer">O que o Python pode fazer?</h3>
         <ul>
             <li>O Python pode ser usado em um servidor para criar aplicações web.</li>
             <li>O Python pode ser usado em conjunto com software para criar fluxos de trabalho.</li>
@@ -53,7 +53,7 @@
             <li>O Python pode ser usado para lidar com big data e realizar matemática complexa.</li>
             <li>O Python pode ser usado para prototipagem rápida ou para o desenvolvimento de software pronto para produção.</li>
         </ul>
-        <h3>Por que Python?</h3>
+        <h3 id="pq">Por que Python?</h3>
         <ul>
             <li>Python funciona em diferentes plataformas (Windows, Mac, Linux, Raspberry Pi, etc).</li>
             <li>Python possui uma sintaxe simples, semelhante ao inglês.</li>
@@ -61,12 +61,12 @@
             <li>Python funciona em um sistema de interpretação, o que significa que o código pode ser executado assim que é escrito. Isso significa que a prototipagem pode ser muito rápida.</li>
             <li>Python pode ser tratado de forma procedural, orientada a objetos ou funcional.</li>
             </ul>
-            <h3>Curiosidades</h3>
+            <h3 id="curi">Curiosidades</h3>
             <ul>
                 <li>A versão principal mais recente do Python é o Python 3. No entanto, o Python 2, embora não esteja recebendo novidades além de atualizações de segurança, ainda é bastante popular.</li>
                 <li>É possível escrever Python em um Ambiente de Desenvolvimento Integrado, como Thonny, Pycharm, Netbeans ou Eclipse, os quais são particularmente úteis ao gerenciar coleções maiores de arquivos Python.</li>
                 </ul>
-                <h3>A sintaxe do Python em comparação com outras linguagens de programação:</h3>
+                <h3 id="comp">A sintaxe do Python em comparação com outras linguagens de programação:</h3>
                 <ul>
                     <li>O Python foi projetado para ser legível e tem algumas semelhanças com o inglês, com influências da matemática.</li>
                     <li>O Python usa novas linhas para completar um comando, ao contrário de outras linguagens de programação que frequentemente usam ponto e vírgula ou parênteses.</li>
@@ -74,14 +74,14 @@
                     </ul>
                     <h3>Exemplo</h3>
                     <p style="color: #20DBA2;">print("Hello,world")</p>
-                    <h3>Instalação do Python</h3>
+                    <h3 id="insta">Instalação do Python</h3>
                     <p>Muitos PCs e Macs já têm o Python instalado.</p>
                     <p>Para verificar se você tem o Python instalado em um PC com Windows, pesquise na barra de inicialização por Python ou execute o seguinte no Prompt de Comando (cmd.exe):</p>
                     <p style="color: #20DBA2;">C:\Users\Seu Nome>python --version</p>
                     <p>Para verificar se você tem o Python instalado em um Linux ou Mac, abra o terminal no Linux ou o Terminal no Mac e digite:</p>
                     <p style="color: #20DBA2;">python --version</p>
                     <p>Se você descobrir que não tem o Python instalado no seu computador, você pode baixá-lo gratuitamente no seguinte site: <a style="color: #20DBA2;" href="https://www.python.org/" target="_blank">https://www.python.org/</a></p>
-                    <h3>Referências</h3>
+                    <h3 id="refe">Referências</h3>
                     <p> <a style="color: #20DBA2;" href="https://www.w3schools.com/default.asp" target="_blank">https://www.w3schools.com/default.asp</a> </p>
                     
     </div>
